test/resources/valid/com/boothj5/jarchexample/application/person/service/PersonService.java
package com.boothj5.jarchexample.application.person.service;

import java.util.List;

import com.boothj5.jarchexample.common.*;
import com.boothj5.jarchexample.configuration.service.ConfigurationService;
import com.boothj5.jarchexample.domain.Person;
import com.boothj5.jarchexample.dto.PersonDTO;

import com.boothj5.jarchexample.application.common.*;
import com.boothj5.jarchexample.application.person.repository.PersonRepository;
import com.boothj5.jarchexample.application.address.service.AddressService;
import com.boothj5.jarchexample.application.telephonenumber.service.TelephoneNumberService;
